--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vf-gl-core",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "vf render core",
-  "main": "./src/index.js",
   "scripts": {
     "dist": "webpack --config webpack.dist.config.js"
   },
+  "main": "./dist/vf-gl-core.min.js",
   "files": [
     "dist/",
     "package.json",
@@ -28,6 +28,7 @@
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "dts-gen": "^0.5.7",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
